// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package DummyGrpc;

service DummyGrpcServer {
	rpc TestMethod (TestRequest) returns (TestReply) {}
}

message TestRequest {
	string prop1 = 1;
	string prop2 = 2;
	string prop3 = 3;
	int32 prop4 = 4;
	int32 prop5 = 5;
	int32 prop6 = 6;
	double prop7 = 7;
	double prop8 = 8;
	double prop9 = 9;
	bool prop10 = 10;
	bool prop11 = 11;
	bool prop12 = 12;
}

message TestReply {
	string prop1 = 1;
	string prop2 = 2;
	string prop3 = 3;
	int32 prop4 = 4;
	int32 prop5 = 5;
	int32 prop6 = 6;
	double prop7 = 7;
	double prop8 = 8;
	double prop9 = 9;
	bool prop10 = 10;
	bool prop11 = 11;
	bool prop12 = 12;
}
